<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/select_sim_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_color"
    android:layoutDirection="ltr">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/app_color"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="@+id/tv_yes"
                app:layout_constraintStart_toStartOf="@+id/tv_no"
                app:layout_constraintTop_toBottomOf="@+id/iv_img" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/exit_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/tv_yes"
                app:layout_constraintStart_toStartOf="@+id/tv_no"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/tv_no"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_12sdp"
                android:elevation="0dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_yes"
                app:layout_constraintEnd_toStartOf="@+id/tv_yes"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_yes">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/no"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tv_yes"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_8sdp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_no"
                app:layout_constraintTop_toBottomOf="@+id/tv_message">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"

        >


        <FrameLayout
            android:id="@+id/fl_native_ad_exit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/includeShimmer"
                layout="@layout/loading_custom_native_admob_media_small" />

        </FrameLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
